fix: gallery page horizontal scroll on swipe

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply flex-1 bg-transparent  overflow-y-auto;
+  @apply flex-1 bg-transparent  overflow-y-auto overflow-x-hidden;
 }
 
 .main {
